--- a/src/pages/nav.less
+++ b/src/pages/nav.less
@@ -1,54 +1,62 @@
-.nav{
-    height: 650px;
-    background: #fbf;
-}
-
-.name{
-    width: 1020px;
-    height: 220px;
-}
-
-.mainImg{
-    width: 64px;
-    height: 64px;
-    display: inline-block;
-    background: url(../../public/img/电视.png);
-    background-size: 64px 64px;
-    margin-right: 16px;
-    background-repeat: no-repeat;
-}
-
-
-.searchForm{
-    width: 100%;
-    height: 80%;
-    background: #fff;
-    padding-left: 40px;
-    border: 1px solid #fff;
-    border-radius: 12px 0px 0px 12px;
-}
-
-.navInnerHeight{
-    height: 180px;
-}
-
-.searchFormWrapper{
-    position: relative;
-}
-
-.searchBtn{
-    width: 86px;
-    height: 86px;
-    background: url(../../public/img/搜索.png) no-repeat;
-    background-size: 86px 86px;
-}
-
-.historyForm{
+.nav {
+  position: relative;
+  height: 160px;
+  background-image: url('https://i0.hdslb.com/bfs/vc/8e084d67aa18ed9c42dce043e06e16b79cbb50ef.png');
+  background-position: center center;
+  .navBg {
     position: absolute;
-    width: 100%;
-    background: #fff;
+    z-index: 1;
+    .girl {
+      height: 140px;
+    }
+  }
 }
 
-.historyItem{
-    padding:40px;
+.name {
+  width: 1020px;
+  height: 16px;
+}
+
+.mainImg {
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+  background: url(../../public/img/电视.png);
+  background-size: 16px 16px;
+  margin-right: 8px;
+  background-repeat: no-repeat;
+}
+
+.searchForm {
+  width: 100%;
+  height: 80%;
+  background: #fff;
+  padding-left: 20px;
+  border: 1px solid #fff;
+  border-radius: 12px 0px 0px 12px;
+}
+
+.navInnerHeight {
+  height: 30px;
+}
+
+.searchFormWrapper {
+  position: relative;
+}
+
+.searchBtn {
+  width: 36px;
+  height: 36px;
+  background: url(../../public/img/搜索.png) no-repeat;
+  background-size: 36px 36px;
+}
+
+.historyForm {
+  position: absolute;
+  width: 100%;
+  background: #fff;
+}
+
+.historyItem {
+  padding: 40px;
 }
