--- a/src/pages/nav.less
+++ b/src/pages/nav.less
@@ -1,13 +1,36 @@
 .nav {
   position: relative;
-  height: 160px;
+  height: 166px;
   background-image: url('https://i0.hdslb.com/bfs/vc/8e084d67aa18ed9c42dce043e06e16b79cbb50ef.png');
-  background-position: center center;
+  background-position: -400px 0;
+  background-repeat: no-repeat;
+  overflow: hidden;
   .navBg {
     position: absolute;
     z-index: 1;
+    > img {
+      position: absolute;
+    }
     .girl {
-      height: 140px;
+      height: 166px;
+    }
+    .grass {
+      height: 166px;
+      object-fit: cover;
+      z-index: 2;
+    }
+    .hill {
+      height: 166px;
+    }
+    .leaf {
+      height: 166px;
+      margin-left: -100px;
+      margin-top: 30px;
+      z-index: 3;
+    }
+    .flower {
+      height: 166px;
+      z-index: 4;
     }
   }
 }
@@ -38,6 +61,8 @@
 
 .navInnerHeight {
   height: 30px;
+  position: relative;
+  z-index: 10;
 }
 
 .searchFormWrapper {
