--- a/src/pages/nav.less
+++ b/src/pages/nav.less
@@ -22,7 +22,7 @@ li {
 .nav {
   position: relative;
   height: 166px;
-  background-image: url('https://i0.hdslb.com/bfs/vc/8e084d67aa18ed9c42dce043e06e16b79cbb50ef.png');
+  background-image: url('../../public/img/bg.png');
   background-position: -400px 0;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -112,4 +112,9 @@ li {
       }
     }
   }
+}
+.navTabline {
+  height: 80%;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), transparent);
 }
