--- a/src/pages/nav.less
+++ b/src/pages/nav.less
@@ -1,7 +1,7 @@
 .nav {
   position: relative;
   height: 166px;
-  background-image: url('https://i0.hdslb.com/bfs/vc/8e084d67aa18ed9c42dce043e06e16b79cbb50ef.png');
+  background-image: url('../../public/img/bg.png');
   background-position: -400px 0;
   background-repeat: no-repeat;
   overflow: hidden;
@@ -10,16 +10,21 @@
     z-index: 1;
     > img {
       position: absolute;
+      transition: 0s;
+      transform: translateX(0px);
     }
     .girl {
+      filter: blur(0px);
       height: 166px;
     }
     .grass {
       height: 166px;
+      filter: blur(3px);
       object-fit: cover;
       z-index: 2;
     }
     .hill {
+      filter: blur(0px);
       height: 166px;
     }
     .leaf {
@@ -27,9 +32,11 @@
       margin-left: -100px;
       margin-top: 30px;
       z-index: 3;
+      filter: blur(7px);
     }
     .flower {
       height: 166px;
+      filter: blur(4px);
       z-index: 4;
     }
   }
