整理文件，加入配置，组件分离

--- a/src/pages/NavBg/nav.less
+++ b/src/pages/NavBg/nav.less
@@ -22,7 +22,7 @@ li {
 .nav {
   position: relative;
   height: 166px;
-  background-image: url('../../public/img/bg.png');
+  background-image: url('~@public/img/bg.png');
   background-position: -400px 0;
   background-repeat: no-repeat;
   overflow: hidden;
