--- a/src/pages/NavBg/nav.less
+++ b/src/pages/NavBg/nav.less
@@ -25,9 +25,11 @@ li {
   background-image: url('~@public/img/bg.png');
   background-position: -400px 0;
   background-repeat: no-repeat;
-  overflow: hidden;
   .navBg {
     position: absolute;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
     z-index: 1;
     > img {
       position: absolute;
