--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,17 @@ a {
   color: rgb(73, 72, 72);
 }
 
+#root{
+  height: 100%;
+  width: 100%;
+}
+
+body, html{
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
 .ml-8 {
   margin-left: 8px;
 }
@@ -20,30 +31,22 @@ a {
   margin-left: 24px;
 }
 
+.mb-8 {
+  margin-bottom: 8px;
+}
+
+.mb-16 {
+  margin-bottom: 16px;
+}
+
+.mb-24 {
+  margin-bottom: 24px;
+}
+
 li {
   list-style: none;
 }
 
 ul {
   margin: 0;
-}
-
-@font-face {
-  font-family: 'iconfont'; /* project id 2125935 */
-  src: url('//at.alicdn.com/t/font_2125935_b3n7up5twqn.eot');
-  src: url('//at.alicdn.com/t/font_2125935_b3n7up5twqn.eot?#iefix')
-      format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_2125935_b3n7up5twqn.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_2125935_b3n7up5twqn.woff') format('woff'),
-    url('//at.alicdn.com/t/font_2125935_b3n7up5twqn.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_2125935_b3n7up5twqn.svg#iconfont') format('svg');
-}
-
-.iconfont {
-  font-family: 'iconfont' !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
-  -moz-osx-font-smoothing: grayscale;
 }
